# fdk-mqa-scoring-bff

./: .env.test  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  openapi.yaml
.github/workflows/: deploy-prod&demo.yaml  deploy-staging.yaml
deploy/base/: deployment-fdk-mqa-scoring-api.yaml  kustomization.yaml  service-fdk-mqa-scoring-api.yaml
deploy/demo/: env.yaml
deploy/prod/: env.yaml
deploy/staging/: env.yaml
migrations/2022-06-09-141909_datasets_dimensions/: down.sql  up.sql
migrations/2022-06-09-141909_datasets_dimensions_catalogs/: down.sql  up.sql
src/: database.rs  db_models.rs  error.rs  main.rs  models.rs  schema.rs  score.rs  scoring.rs  vocab.rs
src/models/: _api_assessments__uuid__get_200_response_inner.rs  dataset_score.rs  datasets_graphs.rs  datasets_request.rs  datasets_scores.rs  dimension.rs  dimension_aggregate.rs  error.rs  metric.rs  mod.rs  score.rs  score_post_request.rs  score_put_request.rs
tests/: assessment.ttl  post.json  score.json
