[package]
name = "fdk-mqa-scoring-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.0"
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
diesel_migrations = { version = "1.4.0", features = ["postgres"] }
http = "0.2.8"
lazy_static = "1.4.0"
mime = "0.3.16"
r2d2 = "0.8.10"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.92"
serde_yaml = "0.9.17"
thiserror = "1.0.38"
tracing = "0.1.37"
tracing-subscriber =  { version = "0.3.16", features = ["json"] }
utoipa = "1.1.0"
utoipa-swagger-ui = { version = "3.0.2", features = ["actix-web"] }
uuid = { version = "1.3.0", features = ["v4"] }
