[package]
name = "fdk-mqa-scoring-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.5"
actix-web = "4.4.0"
diesel = { version = "2.1.3", features = ["postgres", "r2d2"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
http = "1.0.0"
lazy_static = "1.4.0"
mime = "0.3.17"
r2d2 = "0.8.10"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber =  { version = "0.3.17", features = ["json", "env-filter", "tracing-log"] }
utoipa = "4.0.0"
utoipa-swagger-ui = { version = "5.0.0", features = ["actix-web"] }
uuid = { version = "1.6.1", features = ["v4"] }
