[package]
name = "fdk-mqa-scoring-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
diesel = { version = "2.2.6", features = ["postgres", "r2d2"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
http = "1.2.0"
lazy_static = "1.5.0"
mime = "0.3.17"
r2d2 = "0.8.10"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.139"
serde_yaml = "0.9.27"
thiserror = "2.0.8"
tracing = "0.1.41"
tracing-subscriber =  { version = "0.3.19", features = ["json", "env-filter", "tracing-log"] }
utoipa = "5.3.0"
utoipa-swagger-ui = { version = "8.1.0", features = ["actix-web"] }
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
dotenvy = "0.15.7"